crates/biome_html_parser/tests/html_specs/ok/svelte/directives/class_basic.svelte
<div class:active={isActive}>Toggle active</div>
<button class:disabled={!canSubmit}>Submit</button>
