crates/biome_html_parser/tests/html_specs/error/svelte/directives/class_missing_name.svelte
<div class:={isActive}>Invalid</div>
